--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,9 @@ package: github.com/etcd-manager/etcd-discovery
 import:
 - package: github.com/appscode/go
   version: master
+- package: github.com/jpillora/go-ogle-analytics
+- package: github.com/spf13/afero
+  version: master
 - package: github.com/spf13/cobra
   version: master
 - package: github.com/spf13/pflag
