--- a/glide.yaml
+++ b/glide.yaml
@@ -18,6 +18,8 @@ import:
   version: kubernetes-1.9.0
 - package: k8s.io/client-go
   version: v6.0.0
+- package: k8s.io/kubernetes
+  version: v1.9.0
 - package: k8s.io/kube-openapi
   version: master
 - package: github.com/appscode/kutil
